--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,9 @@
+<%= render "components/navbar" %>
 <h1>Lists</h1>
 <ul>
 <% @lists.each do |list| %>
-  <li><%=list.name%></li>
-
+  <li>
+    <%= link_to list.name, list_path(list.id) %>
+  </li>
 <% end %>
 </ul>
