--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,6 @@
+<%= render "components/navbar" %>
 
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 
 <h1><%=@list.name  %></h1>
 
